Silence terraform commands
Cleaner outputs

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -10,12 +10,12 @@ clean:
 
 .PHONY: init
 init:
-	terraform init
+	@terraform init
 
 .PHONY: plan
 plan:
-	terraform plan
+	@terraform plan
 
 .PHONY: apply
 apply:
-	terraform apply -auto-approve
+	@terraform apply -auto-approve
