Add basic test setup for flag resource
- Test if it can create
- Fix minor issues with setup around

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ## Flagr Host - Host for the flagr API, e.g.: flagr.mycompany.com
-# FLAGR_HOST="127.0.0.1:8000"
+# FLAGR_HOST="http://127.0.0.1:8000"
 
 ## Flagr Path - Path for the flagr API, e.g.: /custom/api/v1, default: /api/v1
 # FLAGR_PATH="/api/v1"
